--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "CoEdPilot",
   "description": "A code co-edit helper.",
   "version": "0.1.0",
-  "publisher": "Code Philia",
+  "publisher": "codephilia",
   "repository": {
     "type": "git",
     "url": "https://github.com/code-philia/CoEdPilot-extension.git"
